@@ -1,3 +1,7 @@
+2005-10-13  Andy Wingo  <wingo@pobox.com>
+
+	* src/htdocs/news/status.xml (http): dump
+
 2005-10-05  Andy Wingo  <wingo@pobox.com>
 
 	* src/htdocs/news/status.xml: sump.
